[gd_scene load_steps=5 format=3 uid="uid://eqyhkfrap4yc"]

[ext_resource type="Script" path="res://dialogue/dialogue_box.gd" id="1_ndget"]
[ext_resource type="Texture2D" uid="uid://dfy7t0y7xpovt" path="res://assets/textures/dialogue_character.png" id="2_jah1w"]
[ext_resource type="Texture2D" uid="uid://ckf1l8xq0kugc" path="res://assets/textures/dialogue_companion.png" id="3_dv17h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_timoc"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.00674702, 0.110076, 0.188092, 1)

[node name="DialogueBox" type="Node2D"]
script = ExtResource("1_ndget")

[node name="LeftSprite" type="Sprite2D" parent="."]
position = Vector2(167, 363)
texture = ExtResource("2_jah1w")

[node name="RightSprite" type="Sprite2D" parent="."]
position = Vector2(984, 394)
texture = ExtResource("3_dv17h")
flip_h = true

[node name="DialogueBox" type="PanelContainer" parent="."]
offset_left = 17.0
offset_top = 472.0
offset_right = 1134.0
offset_bottom = 633.0
theme_override_styles/panel = SubResource("StyleBoxFlat_timoc")

[node name="RichTextLabel" type="RichTextLabel" parent="DialogueBox"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Some Test Dialogue...."
autowrap_mode = 2
